--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "@mui/x-charts": "^7.26.0",
     "@toast-ui/react-calendar": "^2.1.3",
     "@types/react-beautiful-dnd": "^13.1.8",
+    "@vitejs/plugin-react": "^3.0.0",
     "bcryptjs": "^2.4.3",
     "chart.js": "^4.4.7",
     "date-fns": "^4.1.0",
+    "firebase": "^11.3.1",
     "gsap": "^3.12.7",
     "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.1",
@@ -28,16 +30,15 @@
     "react-icons": "^5.4.0",
     "react-toastify": "^11.0.3",
     "tippy.js": "^6.3.7",
-    "web-vitals": "^4.2.4",
     "vite": "^4.4.0",
-    "@vitejs/plugin-react": "^3.0.0"
+    "web-vitals": "^4.2.4"
   },
   "scripts": {
-    "dev": "vite",                     
-    "build": "vite build",             
-    "serve": "vite preview",           
-    "test": "react-scripts test",      
-    "eject": "react-scripts eject"    
+    "dev": "vite",
+    "build": "vite build",
+    "serve": "vite preview",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
