--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@fullcalendar/interaction": "^6.1.15",
     "@fullcalendar/react": "^6.1.15",
     "@fullcalendar/timegrid": "^6.1.15",
+    "@hello-pangea/dnd": "^18.0.1",
     "@mui/icons-material": "^6.4.3",
     "@mui/material": "^6.4.3",
     "@mui/x-charts": "^7.26.0",
@@ -24,7 +25,6 @@
     "firebase": "^11.3.1",
     "gsap": "^3.12.7",
     "react": "^18.2.0",
-    "react-beautiful-dnd": "^13.1.1",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.4.0",
