--- a/.env
+++ b/.env
@@ -1,3 +1,10 @@
-REACT_APP_API_URL=http://localhost:8080
-REACT_APP_FIREBASE_API_KEY=AIzaSyBChufygTN7Zapv2b3gPD-Tx8NhMByJvdQ
-REACT_APP_FIREBASE_AUTH_DOMAIN=my-health-tracker-6bee8.firebaseapp.com
+VITE_FIREBASE_API_URL=http://localhost:8080
+VITE_FIREBASE_API_KEY=AIzaSyD64A3LlceBtvBH2Uphg5yTUP9MgK1EeBc
+VITE_FIREBASE_AUTH_DOMAIN=my-health-tracker-application.firebaseapp.com
+VITE_FIREBASE_PROJECT_ID=my-health-tracker-application
+VITE_FIREBASE_STORAGE_BUCKET=my-health-tracker-application.firebasestorage.app
+VITE_FIREBASE_MESSAGING_SENDER_ID=905993574620
+VITE_FIREBASE_APP_ID=1:905993574620:web:a260374a962ab204a5bc19
+VITE_FIREBASE_MEASUREMENT_ID=G-VWBPEK6BLD
+VITE_OPEN_METEO_API_URL=https://api.open-meteo.com/v1/forecast
+VITE_WEATHER_COM_URL=https://weather.com/tr-TR/weather/today/l
