--- a/package.json
+++ b/package.json
@@ -23,7 +23,10 @@
     "chart.js": "^4.4.7",
     "date-fns": "^4.1.0",
     "firebase": "^11.3.1",
+    "framer-motion": "^12.4.3",
     "gsap": "^3.12.7",
+    "idb-keyval": "^6.2.1",
+    "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.2.0",
