--- a/package.json
+++ b/package.json
@@ -8,28 +8,40 @@
     "@dnd-kit/utilities": "^3.2.2",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@fullcalendar/core": "^6.1.15",
     "@fullcalendar/daygrid": "^6.1.15",
     "@fullcalendar/interaction": "^6.1.15",
+    "@fullcalendar/multimonth": "^6.1.15",
     "@fullcalendar/react": "^6.1.15",
     "@fullcalendar/timegrid": "^6.1.15",
     "@hello-pangea/dnd": "^18.0.1",
-    "@mui/icons-material": "^6.4.3",
-    "@mui/material": "^6.4.3",
+    "@mui/icons-material": "^6.4.4",
+    "@mui/material": "^6.4.4",
     "@mui/x-charts": "^7.26.0",
+    "@toast-ui/calendar": "^2.1.3",
     "@toast-ui/react-calendar": "^2.1.3",
     "@types/react-beautiful-dnd": "^13.1.8",
     "@vitejs/plugin-react": "^3.0.0",
     "bcryptjs": "^2.4.3",
+    "canvas-confetti": "^1.9.3",
     "chart.js": "^4.4.7",
-    "date-fns": "^4.1.0",
+    "date-fns": "^4.0.0",
+    "date-fns-tz": "^3.2.0",
     "firebase": "^11.3.1",
+    "framer-motion": "^12.4.3",
     "gsap": "^3.12.7",
+    "luxon": "^3.5.0",
+    "moment": "^2.30.1",
+    "moment-timezone": "^0.5.47",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.3.0",
+    "react-confetti": "^6.2.2",
     "react-dom": "^18.2.0",
     "react-icons": "^5.4.0",
     "react-toastify": "^11.0.3",
     "tippy.js": "^6.3.7",
+    "tui-date-picker": "^4.3.3",
+    "tui-time-picker": "^2.1.6",
     "vite": "^4.4.0",
     "web-vitals": "^4.2.4"
   },
