--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "tippy.js": "^6.3.7",
     "tui-date-picker": "^4.3.3",
     "tui-time-picker": "^2.1.6",
+    "uuid": "^11.0.5",
     "vite": "^4.4.0",
     "web-vitals": "^4.2.4"
   },
