--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@toast-ui/react-calendar": "^2.1.3",
     "@types/react-beautiful-dnd": "^13.1.8",
     "@vitejs/plugin-react": "^3.0.0",
+    "axios": "^1.7.9",
     "bcryptjs": "^2.4.3",
     "canvas-confetti": "^1.9.3",
     "chart.js": "^4.4.7",
