--- a/package.json
+++ b/package.json
@@ -26,8 +26,11 @@
     "bcryptjs": "^2.4.3",
     "canvas-confetti": "^1.9.3",
     "chart.js": "^4.4.7",
+    "cors": "^2.8.5",
     "date-fns": "^4.0.0",
     "date-fns-tz": "^3.2.0",
+    "dotenv": "^16.4.7",
+    "express": "^4.21.2",
     "firebase": "^11.3.1",
     "framer-motion": "^12.4.3",
     "gsap": "^3.12.7",
@@ -40,11 +43,13 @@
     "react-dom": "^18.2.0",
     "react-icons": "^5.4.0",
     "react-toastify": "^11.0.3",
+    "serverless-http": "^3.2.0",
     "tippy.js": "^6.3.7",
     "tui-date-picker": "^4.3.3",
     "tui-time-picker": "^2.1.6",
     "uuid": "^11.0.5",
     "vite": "^4.4.0",
+    "web-push": "^3.6.7",
     "web-vitals": "^4.2.4"
   },
   "scripts": {
