--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "firebase": "^11.3.1",
     "framer-motion": "^12.4.3",
     "gsap": "^3.12.7",
+    "lottie-react": "^2.4.1",
     "luxon": "^3.5.0",
     "moment": "^2.30.1",
     "moment-timezone": "^0.5.47",
