--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "framer-motion": "^12.4.3",
     "gsap": "^3.12.7",
     "lottie-react": "^2.4.1",
+    "lucide-react": "^0.475.0",
     "luxon": "^3.5.0",
     "moment": "^2.30.1",
     "moment-timezone": "^0.5.47",
