--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Wellness",
-  "name": "Sağlık Takip Uygulaması",
+  "short_name": "Stay Healthy With Me",
+  "name": "Sağlık ve Rutin Takip Uygulaması",
   "icons": [
     {
       "src": "/logo4.jpeg",
