--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "luxon": "^3.5.0",
     "moment": "^2.30.1",
     "moment-timezone": "^0.5.47",
+    "openai": "^4.85.3",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.3.0",
     "react-confetti": "^6.2.2",
