--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^5.4.0",
     "react-toastify": "^11.0.3",
+    "recharts": "^2.15.1",
     "serverless-http": "^3.2.0",
     "tippy.js": "^6.3.7",
     "tui-date-picker": "^4.3.3",
