--- a/netlify.toml
+++ b/netlify.toml
@@ -1,10 +1,7 @@
-# Proje kök dizininde oluşturun
 [build]
   command = "npm run build"
-  functions = "netlify/functions"
   publish = "dist"
 
-[[redirects]]
-  from = "/api/*"
-  to = "/.netlify/functions/:splat"
-  status = 200
+[[edge_functions]]
+  function = "qwen-proxy"
+  pattern = "/api/qwen-proxy"
