--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@mui/icons-material": "^6.4.4",
     "@mui/material": "^6.4.4",
     "@mui/x-charts": "^7.26.0",
+    "@netlify/edge-functions": "^2.11.1",
     "@toast-ui/calendar": "^2.1.3",
     "@toast-ui/react-calendar": "^2.1.3",
     "@types/react-beautiful-dnd": "^13.1.8",
