--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fullcalendar/interaction": "^6.1.15",
     "@fullcalendar/multimonth": "^6.1.15",
     "@fullcalendar/react": "^6.1.15",
+    "@fullcalendar/rrule": "^6.1.15",
     "@fullcalendar/timegrid": "^6.1.15",
     "@hello-pangea/dnd": "^18.0.1",
     "@mui/icons-material": "^6.4.4",
