Add scheduled push notification function and update Netlify configuration

--- a/netlify.toml
+++ b/netlify.toml
@@ -17,3 +17,7 @@
 [[edge_functions]]
   function = "delete-routine"
   pattern = "/api/delete-routine"
+
+[[functions]]
+  path = "scheduled-push.js"
+  schedule = "0 14 * * *"   # Her gün UTC saat 09:00'da tetiklenecek
