--- a/netlify.toml
+++ b/netlify.toml
@@ -18,6 +18,6 @@
   function = "delete-routine"
   pattern = "/api/delete-routine"
 
-[[functions]]
+[functions.scheduled-push]
   path = "scheduled-push.js"
-  schedule = "7 14 * * *"
+  schedule = "8 14 * * *"
