--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "firebase": "^11.3.1",
+    "firebase-admin": "^13.1.0",
     "framer-motion": "^12.4.3",
     "gsap": "^3.12.7",
     "idb": "^8.0.2",
