--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "firebase-admin": "^13.1.0",
     "framer-motion": "^12.4.3",
     "gsap": "^3.12.7",
+    "http-proxy-middleware": "^3.0.3",
     "idb": "^8.0.2",
     "lottie-react": "^2.4.1",
     "lucide-react": "^0.475.0",
