--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "date-fns-tz": "^3.2.0",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
-    "firebase": "^11.3.1",
+    "firebase": "^11.4.0",
+    "firebase-admin": "^13.1.0",
     "framer-motion": "^12.4.3",
     "gsap": "^3.12.7",
     "idb": "^8.0.2",
