Add Firebase messaging support, implement notification token management, and set up scheduled push notifications

--- a/netlify.toml
+++ b/netlify.toml
@@ -5,3 +5,14 @@
 [[edge_functions]]
   function = "qwen-proxy"
   pattern = "/api/qwen-proxy"
+
+
+[functions]
+  directory = "netlify/functions"
+
+[[plugins]]
+  package = "@netlify/plugin-schedule"
+
+[[schedule]]
+  function = "sendPushNotification"
+  cron = "*/1 * * * *"
