--- a/netlify.toml
+++ b/netlify.toml
@@ -2,14 +2,14 @@
   command = "npm run build"
   publish = "dist"
 
+[functions]
+  directory = "netlify/functions"
+
 [[edge_functions]]
   function = "qwen-proxy"
   pattern = "/api/qwen-proxy"
 
-
-[functions]
-  directory = "netlify/functions"
-
+# Zamanlanmış fonksiyon
 [[scheduled_functions]]
   function = "sendPushNotification"
-  schedule = "*/1 * * * *"  # ✅ Doğru kullanım
+  schedule = "*/1 * * * *"
