Add CORS headers in netlify.toml for improved API access; enhance error handling in HealthDashboard component to provide specific feedback based on API response codes.

--- a/netlify.toml
+++ b/netlify.toml
@@ -13,3 +13,10 @@
 [[scheduled_functions]]
   function = "sendPushNotification"
   schedule = "*/1 * * * *"
+
+[[headers]]
+  for = "/*"
+  [headers.values]
+    Access-Control-Allow-Origin = "*"
+    Access-Control-Allow-Methods = "GET, POST, PUT, DELETE, OPTIONS"
+    Access-Control-Allow-Headers = "Content-Type, Authorization"
