--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Stay Healthy With Me",
-  "name": "Sağlık ve Rutin Takip Uygulaması",
+  "short_name": "StayHealthyWith.me",
+  "name": "StayHealthyWith.me - Kişisel Sağlık ve Rutin Takip Sistemi",
   "icons": [
     {
       "src": "/logo4.jpeg",
@@ -20,7 +20,9 @@
   "theme_color": "#1976d2",
   "background_color": "#ffffff",
   "scope": "/",
-  "description": "Kişisel Sağlık Takip Uygulaması",
+  "description": "StayHealthyWith.me ile sağlığınızı takip edin. Su tüketimi, vitamin takibi, egzersiz rutinleri ve günlük aktivitelerinizi kolayca yönetin. Ücretsiz sağlık takip uygulaması.",
   "orientation": "portrait-primary",
-  "categories": ["health", "productivity"]
+  "categories": ["health", "productivity", "lifestyle", "fitness"],
+  "lang": "tr",
+  "dir": "ltr"
 }
