--- a/netlify.toml
+++ b/netlify.toml
@@ -24,7 +24,7 @@
     X-Frame-Options = "DENY"
     X-Content-Type-Options = "nosniff"
     Referrer-Policy = "strict-origin-when-cross-origin"
-    Permissions-Policy = "camera=(), microphone=(), geolocation=()"
+    Permissions-Policy = "camera=(), microphone=()"
     X-XSS-Protection = "1; mode=block"
 
 # Cache headers for static assets
