--- a/public/.htaccess
+++ b/public/.htaccess
@@ -33,7 +33,7 @@ Header set Access-Control-Allow-Origin "*"
     Header set X-Frame-Options "SAMEORIGIN"
     Header set Strict-Transport-Security "max-age=31536000; includeSubDomains"
     Header set Referrer-Policy "strict-origin-when-cross-origin"
-    Header set Permissions-Policy "geolocation=(), microphone=(), camera=()"
+    Header set Permissions-Policy "microphone=(), camera=()"
 </IfModule>
 
 # Redirect to HTTPS
