--- a/public/manifest.json
+++ b/public/manifest.json
@@ -24,5 +24,13 @@
   "orientation": "portrait-primary",
   "categories": ["health", "productivity", "lifestyle", "fitness"],
   "lang": "tr",
-  "dir": "ltr"
+  "dir": "ltr",
+  "prefer_related_applications": false,
+  "related_applications": [],
+  "edge_side_panel": {
+    "preferred_width": 400
+  },
+  "launch_handler": {
+    "client_mode": "navigate-existing"
+  }
 }
